--- a/style.css
+++ b/style.css
@@ -1,106 +1,75 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap" rel="stylesheet');
 
 :root {
-    --font: 'Fira Sans', sans-serif;
+    --font: 'Montserrat', sans-serif;;
     --background: rgba(0, 0, 0, 0.55);
     --selection: rgb(59, 59, 59);
-    --comment: #ffffff;
-    --purple: #ffffff;
-    --pink: #ffffff;
 }
 
 body{
     background-color: aliceblue;
-    color: #313131;
+    color: #000000;
 }
 
-footer{
+footer {
     text-align: center;
-
-    color:var(--comment);
-
     font-family: var(--font);
     font-size: 0.75rem;
     font-weight: 400;
 }
 
 #userPhoto{
-    width: 96px;
-    height: 96px;
-
+    width: 200px;
+    height: 200px;
     display: block;
-
-    margin: 35px auto 20px;
-
-    border-radius: 50%;
-    border: solid var(--purple) 2px;
+    margin: 5px auto;
 }
 
-#userName{
+#title {
+    word-wrap: break-word;
     width: 100%;
-
     color: black;
-
     font-family: var(--font);
     font-size: 3rem;
-    font-weight: 600;
-
+    font-weight: 800;
     text-align: center;
     text-decoration: none;
-
     line-height: 1.25;
     display: block;
+    margin: unset;
 }
 
 #links{
     max-width: 675px;
     width: auto;
-
     display: block;
-
-    margin: 27px auto;
+    margin: 0px auto;
 }
-.link{
+.desc {
+    display: block;
+    font-family: var(--font);
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: 5px;
+    width: auto;
+    text-align: center;
+    text-decoration: none;
+}
+.link, .info {
+    margin-top: 10px;
     display: block;
     margin-bottom: 20px;
     padding: 17px;
-
     background-color: var(--background);
     color: #ffffff;
     font-family: var(--font);
     font-size: 1rem;
     font-weight: 500;
-
     border-radius: 5px;
-    border: solid var(--purple) 1px;
-
     text-align: center;
     text-decoration: none;
-    
     transition: all .25s cubic-bezier(.08,.59,.29,.99);
-    
-}
-.link2 {
-    display: block;
-    margin-bottom: 20px;
-    padding: 17px;
-
-    background-color: var(--background);
-    color: #ffffff;
-    font-family: var(--font);
-    font-size: 1rem;
-    font-weight: 500;
-
-    border-radius: 5px;
-    border: solid var(--purple) 1px;
-
-    text-align: center;
-    text-decoration: none;
-
-    transition: all .25s cubic-bezier(.08,.59,.29,.99);
-
 }
 .link:hover{
     background-color: var(--selection);
-    color: var(--purple);
 }
